bug fixed. whitespace removed by making svg display:block

--- a/styles.css
+++ b/styles.css
@@ -191,6 +191,13 @@ nav a:active {
 
 .svg-container {
   position: relative;
+  /* display: inline;
+  margin: 0;
+  padding: 0; */
+}
+
+.nav svg {
+  display: block;
 }
 
 .badge-circle-small {
@@ -205,18 +212,13 @@ nav a:active {
   text-align: center;
   line-height: 15px;
   font-size: 1rem;
-  display: none;
 }
 
 .color-action {
   background-color: var(--color-action);
 }
 
-.display-block {
-  display: block;
-}
-
-.display .flex {
+.flex {
   display: flex;
   justify-content: center;
 }
